--- a/html/page-2.html
+++ b/html/page-2.html
@@ -24,7 +24,7 @@
  <div class="row container">
     <div class=" box-1 col s2 blue-text title-nav">
         <a href="" class=""><div class="row nav">My profile<div class="col"><i class="material-icons">account_circle</i></div></div></a>
-       <a href="" class=""> <div class="row nav">News<div class="col"><i class="material-icons">cast_connected</i></div></div></a>
+       <a href="./page-3.html" class=""> <div class="row nav">News<div class="col"><i class="material-icons">cast_connected</i></div></div></a>
        <a href="" class=""> <div class="row nav">Messages<div class="col"><i class="material-icons">email</i></div></div></a>
         <a href="" class=""><div class="row nav menu">Friends<div class="col"><i class="material-icons">face</i></div></div></a>
        <a href="" class=""> <div class="row nav">Events<div class="col"><i class="material-icons">language</i></div></div></a>
